--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "google-auth-library": "^9.15.0",
     "joi": "^17.13.3",
@@ -22,6 +23,8 @@
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
+    "pdfkit-table": "^0.1.99",
+    "pdfmake": "^0.2.18",
     "redis": "^4.7.0"
   }
 }
